Coffee-Shop-Order-System:Description
Expanded project documentation with detailed features, technologies, requirements, and setup instructions.